--- a/src/app/clients-main/clients-main.component.css
+++ b/src/app/clients-main/clients-main.component.css
@@ -1,20 +1,18 @@
 
 app-client-details {
-	/*outline: 1px solid blue;*/
-	width: 60%;
+	width: 70%;
 	padding: 5px;
 	display: flex;
 }
 
 app-clients-list {
-	/*outline: 1px solid blue;*/
 	margin-top: 5px;
 	overflow-y: auto;
 }
 
 .main-cnt {
-	width: 70%;
-	height: 60vh;
+	width: 60%;
+	height: 70vh;
 	margin: auto;
 	padding: 5px;
 	background: #B9ECB6;
@@ -23,6 +21,7 @@ app-clients-list {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	font-family: Arial, sans-serif;
 }
 
 .title-cnt {
@@ -38,14 +37,13 @@ app-clients-list {
 }
 
 .clients-cnt {
-	/*outline: 1px solid red;*/
 	height: 95%;
 	display: flex;
 	justify-content: space-between;
 }
 
 .clients-find {
-	width: 40%;
+	width: 30%;
 	height: 100%;
 	padding: 5px;
 	border: 1px solid black;
