--- a/src/app/clients-main/clients-main.component.html
+++ b/src/app/clients-main/clients-main.component.html
@@ -1,9 +1,11 @@
 
-<div class="main-cnt">
-	
-	<div class="title-cnt">
-		<span class="title-text">Clietns List</span>
-	</div>
+<div class="main-cnt" >
+
+	<mat-toolbar color="primary">
+		<mat-toolbar-row>
+			<span>Clients List</span>
+		</mat-toolbar-row>
+	</mat-toolbar>
 
 	<div class="clients-cnt">
 
