--- a/src/app/client-details/client-details.component.css
+++ b/src/app/client-details/client-details.component.css
@@ -4,7 +4,7 @@
 	padding: 5px;
 }
 
-.avatar {
+.client-avatar_details {
 	margin-top: 10px;
 	padding: 5px;
 }
@@ -15,7 +15,7 @@
 	justify-content: space-around;
 }
 
-.name {
+.client-name_detailed {
 	font-weight: bold;
 }
 
