--- a/src/app/clients-list/clients-list.component.css
+++ b/src/app/clients-list/clients-list.component.css
@@ -1,15 +1,13 @@
 
 .client-item {
-	border: 1px solid black;
 	padding: 5px;
-	border-radius: 5px;
 	margin-top: 5px;
 	display: flex;
 	align-items: center;
 }
 
 .client-item:hover {
-	background: #2ED088FF;
+	background: #96A1F7;
 	cursor: pointer;
 }
 
@@ -18,12 +16,12 @@
 }
 
 
-#avatar {
+#client-avatar_list {
 	margin-left: 5px;
 	width: 50px;
 	height: 50px;
 }
 
-#name {
+#client-name {
 	font-weight: bold;
 }
