--- a/src/app/clients-main/clients-main.component.css
+++ b/src/app/clients-main/clients-main.component.css
@@ -14,30 +14,16 @@ app-clients-list {
 	width: 60%;
 	height: 70vh;
 	margin: auto;
-	padding: 5px;
-	background: #B9ECB6;
 	border: 1px solid black;
-	border-radius: 5px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	font-family: Arial, sans-serif;
 }
 
-.title-cnt {
-	width: 100%;
-	max-height: 7%;
-	background: #27D778FF;
-	text-align: center;
-	border-radius: 5px;
-}
-
-.title-text {
-	
-}
-
 .clients-cnt {
-	height: 95%;
+	height: 100%;
+	background: #F2F2F2;
 	display: flex;
 	justify-content: space-between;
 }
@@ -46,9 +32,6 @@ app-clients-list {
 	width: 30%;
 	height: 100%;
 	padding: 5px;
-	border: 1px solid black;
-	border-radius: 5px;
-	background: #B9ECB6;
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
