--- a/src/app/input/input.component.css
+++ b/src/app/input/input.component.css
@@ -1,4 +1,9 @@
-.input {
+.clients-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.clients-full-width {
 	width: 100%;
-	box-sizing: border-box;
 }
